# difftui

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  bin.nix  build-nix.ts  build.ts  bun.nix  bundle.ts  default.nix  flake.nix  opencode.json  package.json  release-please-config.json  tsconfig.json
.github/workflows/: ci.yml  hombrew.yml  release.yml  update-deps.yml
.opencode/: oh-my-opencode.json
rust/: .gitignore  Cargo.toml
rust/src/: app.rs  main.rs  theme.rs
rust/src/components/: footer.rs  header.rs  mod.rs  text_panel.rs
rust/src/services/: clipboard.rs  diff.rs  mod.rs
rust/src/views/: diff.rs  input.rs  mod.rs
src/: App.tsx  cli.ts  index.tsx  theme.ts
src/components/: EmptyState.tsx  Footer.tsx  Header.tsx  HelpBar.tsx  TextPanel.tsx
src/config/: shortcuts.ts
src/hooks/: useKeyboardShortcuts.ts
src/services/: clipboard.ts  diff.ts  editor.ts  syntax.ts
src/types/: index.ts
src/views/: DiffView.tsx  InputView.tsx
